# The-Keyboard-Project

./: .gitignore  LICENSE  README.md
Design/Keyboard_layout/: Kyeboard layout design.afdesign
Design/Logo/7-dni-spoznienia.pretty/: logo.kicad_mod
KeyboardDriver/: CMakeLists.txt  README.md
KeyboardDriver/apps/: CMakeLists.txt  main.cpp
KeyboardDriver/include/KeyboardDriver/: BufferManager.hpp  Key.hpp  KeyMatrix.hpp  UsbHidKeys.hpp  keyboardDesc.h  tusb_config.h  usbDescriptors.hpp
KeyboardDriver/src/: BufferManager.cpp  CMakeLists.txt  KeyMatrix.cpp  SignalEncoder.cpp  usbDescriptors.cpp
PCB/Switch_matrix/switch_matrix_schematic/: switch_matrix.csv  switch_matrix.kicad_prl  switch_matrix.kicad_pro  switch_matrix.kicad_sch  switch_matrix.xml
PCB/main_board/main_board_schematic/: main_board_schematic.kicad_pcb  main_board_schematic.kicad_prl  main_board_schematic.kicad_pro  main_board_schematic.kicad_sch
